# turnleft

./: README.md  nuxt.config.js  package-lock.json  package.json
jupyter/: 01 Navigating a Rogue Map.ipynb  02.01 Playing With Skinner Box.ipynb  02.02 Playing with Lamp Button Box State.ipynb  02.03 Searching through plan space with LampBox.ipynb  03.01 Playing With Superpositions.ipynb  LampButtonBoxState.py  Observation.py  README.md  StateSuperposition.py  skinnerbox.py
layouts/: default.vue
mealyspace/: README.md  pyproject.toml
mealyspace/src/mealyspace/: __init__.py  __main__.py  always_go_east_client.py  cli.py  environment.py  llm_convo_client.py  perfect_play_client.py  session_manager.py
mealyspace/tests/: test_cli.py  test_environment.py  test_session_manager.py
model/agentbody/: Action.ts  ActionVocabulary.ts
model/experience/: ExperienceActionConsequence.ts  ExperienceState.ts  ExperienceStatelet.ts  ExperienceTable.ts  ExperienceTableRow.ts
model/planner/: ActionNode.ts  Plan.ts  StateMemo.ts  StateNode.ts
pages/: index.vue
test/: Logo.spec.js
test/model/experience/: ExperienceActionConsequence.spec.ts  ExperienceState.spec.ts  ExperienceStatelet.spec.ts  ExperienceTable.spec.ts  ExperienceTableRow.spec.ts
www/: nuxt.config.js  package.json  tsconfig.json
www/layouts/: default.vue
www/model/agentbody/: Action.ts
www/model/experience/: ExperienceActionConsequence.ts  ExperienceStatelet.ts
www/test/model/experience/: ExperienceActionConsequence.spec.ts  ExperienceState.spec.ts
