[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mealyspace"
version = "0.1.0"
description = "A tiny grid navigation REPL."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
mealyspace = "mealyspace.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]